deploy/openshift/00-platform.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mayainsurance-decision-local
  labels:
    app.kubernetes.io/part-of: mayainsurance-decision
